force-app/main/default/objects/Show_Timing__c/Show_Timing__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - it stores the timing and related information of the edition</description>
    <label>Show Timing</label>
    <nameField>
        <displayFormat>Auto Number ST-{0000}</displayFormat>
        <label>Show Timing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Show Timings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>