force-app/main/default/objects/Show_Timing__c/fields/Edition__c.field-meta.xml
<CustomField>
    <fullName>Edition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Edition for which show timing is created</description>
    <label>Edition</label>
    <referenceTo>Edition__c</referenceTo>
    <relationshipLabel>Show Timings</relationshipLabel>
    <relationshipName>Show_Timings</relationshipName>
    <type>Lookup</type>
</CustomField>