force-app/main/default/objects/Show_Timing__c/fields/Show_Date__c.field-meta.xml
<CustomField>
    <fullName>Show_Date__c</fullName>
    <description>Date part of show timing for an edition</description>
    <label>Show Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>