force-app/main/default/objects/Show_Timing__c/fields/Show_Hours__c.field-meta.xml
<CustomField>
    <fullName>Show_Hours__c</fullName>
    <description>Opening and closing hours of show on particular date(s)</description>
    <label>Show Hours</label>
    <length>50</length>
    <type>Text</type>
</CustomField>