force-app/main/default/objects/Show_Timing__c/fields/Show_Type__c.field-meta.xml
<CustomField>
    <fullName>Show_Type__c</fullName>
    <description>Type of show Onsite/Online</description>
    <label>Show Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>