force-app/main/default/objects/Show_Timing__c/fields/Sort_order__c.field-meta.xml
<CustomField>
    <fullName>Sort_order__c</fullName>
    <description>Order of show timing in which it will be displayed on UI</description>
    <label>Sort order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>